--- a/balloon.html
+++ b/balloon.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>We go to the Gallery</title>
+    <title>Balloon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link
@@ -13,17 +13,14 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <h1>We go to the Gallery</h1>
-    <div class="container">
-      <a href="./rubbish.html">
-        <img src="rubbish.png" width="400" height="580" alt="rubbish"
-      /></a>
-      <a href="./balloon.html"
-        ><img src="balloon.png" width="400" height="580" alt="balloon"
-      /></a>
-      <a href="./nothing.html">
-        <img src="nothing.png" width="400" height="580" alt="nothing" />
-      </a>
+    <div class="text-container">
+      <h3>"I want to play with the balloon," says John.</h3>
+
+      <h3>
+        "Only venture capitalists can play with this balloon," says Mummy.
+      </h3>
+      <br />
+      <a href="./index.html">"Fine, let's go see something else." says John</a>
     </div>
   </body>
 </html>
