--- a/nothing.html
+++ b/nothing.html
@@ -11,21 +11,26 @@
       rel="stylesheet"
     />
     <script src="main.js"></script>
-    <!-- <style>
-      body {
-        background-image: url("./nothing.png");
-        background-repeat: no-repeat;
-      }
-    </style> -->
   </head>
   <body>
+    <img src="nothing.png" width="420" height="600" alt="nothing" />
     <div class="text-container">
       <h3>There is nothing in the room.</h3>
 
-      <h3>John is confused.</h3>
+      <h3>
+        John is
+        <a href="https://www.urbandictionary.com/define.php?term=confused"
+          >confused</a
+        >.
+      </h3>
       <h3>Susan is confused.</h3>
       <h3>Mummy is happy.</h3>
-      <h3>"There is nothing in the room because God is dead," says Mummy.</h3>
+      <h3>
+        "There is nothing in the room because
+        <a href="https://www.urbandictionary.com/define.php?term=God">God</a> is
+        <a href="https://www.urbandictionary.com/define.php?term=Dead">dead</a
+        >," says Mummy.
+      </h3>
       <h3>"Oh dear," says John.</h3>
 
       <br />
