--- a/balloon.html
+++ b/balloon.html
@@ -13,11 +13,21 @@
     <script src="main.js"></script>
   </head>
   <body>
+    <img src="balloon.png" width="420" height="600" alt="balloon" />
     <div class="text-container">
-      <h3>"I want to play with the balloon," says John.</h3>
+      <h3>
+        "I want to play with the
+        <a href="https://www.urbandictionary.com/define.php?term=balloon"
+          >balloon</a
+        >," says John.
+      </h3>
 
       <h3>
-        "Only venture capitalists can play with this balloon," says Mummy.
+        "Only
+        <a href="https://www.urbandictionary.com/define.php?term=venture"
+          >venture</a
+        >
+        capitalists can play with this balloon," says Mummy.
       </h3>
       <br />
       <a href="./index.html">"Fine, let's go see something else." says John</a>
