--- a/rubbish.html
+++ b/rubbish.html
@@ -13,13 +13,19 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="rubbish.png" alt="rubbish" />
+    <img src="rubbish.png" width="420" height="600" alt="rubbish" />
     <div class="text-container">
       <h3>
-        "The rubbish smells" says Susan.
+        "The rubbish
+        <a href="https://www.urbandictionary.com/define.php?term=smell"
+          >smells</a
+        >" says Susan.
       </h3>
       <h3>
-        "It is the stench of our decaying Western civilzation," says Mummy.
+        "It is the stench of our decaying Western
+        <a href="https://www.urbandictionary.com/define.php?term=civilization"
+          >civilization</a
+        >," says Mummy.
       </h3>
       <br />
       <a href="./index.html">Let's go see some more art</a>
