--- a/balloon.html
+++ b/balloon.html
@@ -30,7 +30,7 @@
         capitalists can play with this balloon," says Mummy.
       </h3>
       <br />
-      <a href="./index.html">"Fine, let's go see something else." says John</a>
+      <a href="./index.html">"Fine, let's go see something else."</a>
     </div>
   </body>
 </html>
