updated folder structure
added 2 more images/stories

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>We go to the Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/main.css"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
@@ -16,16 +21,22 @@
     <h1>We go to the Gallery</h1>
     <div class="container">
       <a href="./rubbish.html">
-        <img src="rubbish.png" width="400" height="580" alt="rubbish"
+        <img src="./img/rubbish.png" width="400" height="580" alt="rubbish"
       /></a>
       <a href="./balloon.html"
-        ><img src="balloon.png" width="400" height="580" alt="balloon"
+        ><img src="./img/balloon.png" width="400" height="580" alt="balloon"
       /></a>
       <a href="./nothing.html">
-        <img src="nothing.png" width="400" height="580" alt="nothing" />
+        <img src="./img/nothing.png" width="400" height="580" alt="nothing" />
       </a>
       <a href="./woman.html">
-        <img src="woman.png" width="400" height="580" alt="woman" />
+        <img src="./img/woman.png" width="400" height="580" alt="woman" />
+      </a>
+      <a href="./painting.html">
+        <img src="./img/painting.png" width="400" height="580" alt="painting" />
+      </a>
+      <a href="./artist.html">
+        <img src="./img/artist.png" width="400" height="580" alt="artist" />
       </a>
     </div>
   </body>
