--- a/nothing.html
+++ b/nothing.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Nothing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/main.css"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
@@ -13,7 +18,7 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="nothing.png" width="420" height="600" alt="nothing" />
+    <img src="./img/nothing.png" width="420" height="600" alt="nothing" />
     <div class="text-container">
       <h3>There is nothing in the room.</h3>
 
@@ -34,7 +39,7 @@
       <h3>"Oh dear," says John.</h3>
 
       <br />
-      <a href="./index.html">I want to see something else</a>
+      <a href="./index.html">John wants to see something else.</a>
     </div>
   </body>
 </html>
