--- a/woman.html
+++ b/woman.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/main.css"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
@@ -13,7 +18,7 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="woman.png" width="420" height="600" alt="rubbish" />
+    <img src="./img/woman.png" width="420" height="600" alt="rubbish" />
     <div class="text-container">
       <h3>
         The
