--- a/artist.html
+++ b/artist.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Balloon</title>
+    <title>Artist</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -18,24 +18,28 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="./img/balloon.png" width="420" height="600" alt="balloon" />
+    <img src="./img/artist.png" width="420" height="600" alt="artist" />
     <div class="text-container">
       <h3>
-        "I want to play with the
-        <a href="https://www.urbandictionary.com/define.php?term=balloon"
-          >balloon</a
-        >," says John.
+        "Are you an
+        <a href="https://www.urbandictionary.com/define.php?term=artist"
+          >artist</a
+        >?" says Jane.
       </h3>
 
       <h3>
-        "Only
-        <a href="https://www.urbandictionary.com/define.php?term=venture"
-          >venture</a
-        >
-        capitalists can play with this balloon," says Mummy.
+        "I couldn't become an artist because I
+        <a href="https://www.urbandictionary.com/define.php?term=had">had</a>
+        you," says Mummy.
+      </h3>
+      <h3>
+        Peter and Jane feel
+        <a href="https://www.urbandictionary.com/define.php?term=guilty"
+          >guilty</a
+        >.
       </h3>
       <br />
-      <a href="./index.html">"Fine, let's go see something else."</a>
+      <a href="./index.html">Mummy left the room.</a>
     </div>
   </body>
 </html>
