--- a/painting.html
+++ b/painting.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Balloon</title>
+    <title>Painting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -18,24 +18,26 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="./img/balloon.png" width="420" height="600" alt="balloon" />
+    <img src="./img/painting.png" width="420" height="600" alt="painting" />
     <div class="text-container">
       <h3>
-        "I want to play with the
-        <a href="https://www.urbandictionary.com/define.php?term=balloon"
-          >balloon</a
-        >," says John.
+        Peter sees the
+        <a href="https://www.urbandictionary.com/define.php?term=painting"
+          >painting</a
+        >.
       </h3>
-
       <h3>
-        "Only
-        <a href="https://www.urbandictionary.com/define.php?term=venture"
-          >venture</a
+        "I
+        <a href="https://www.urbandictionary.com/define.php?term=could"
+          >could</a
         >
-        capitalists can play with this balloon," says Mummy.
+        paint that," says Peter.
+      </h3>
+      <h3>
+        "But you didn't," says Mummy.
       </h3>
       <br />
-      <a href="./index.html">"Fine, let's go see something else."</a>
+      <a href="./index.html">Peter really wants to go home.</a>
     </div>
   </body>
 </html>
