--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
         <img src="./img/artist.png" width="400" height="580" alt="artist" />
       </a>
     </div>
+    <footer>
+      A Dung Beetle Learning Guide Book by Ezra Elia and Miriam Elia
+    </footer>
   </body>
 </html>
