--- a/nothing.html
+++ b/nothing.html
@@ -18,7 +18,9 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="./img/nothing.png" width="420" height="600" alt="nothing" />
+    <div class="img-container">
+      <img src="./img/nothing.png" width="420" height="600" alt="nothing" />
+    </div>
     <div class="text-container">
       <h3>There is nothing in the room.</h3>
 
