--- a/rubbish.html
+++ b/rubbish.html
@@ -18,7 +18,9 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="./img/rubbish.png" width="420" height="600" alt="rubbish" />
+    <div class="img-container">
+      <img src="./img/rubbish.png" width="420" height="600" alt="rubbish" />
+    </div>
     <div class="text-container">
       <h3>
         "The rubbish
