--- a/artist.html
+++ b/artist.html
@@ -18,23 +18,33 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="./img/artist.png" width="420" height="600" alt="artist" />
+    <div class="img-container">
+      <img src="./img/artist.png" width="420" height="600" alt="artist" />
+    </div>
     <div class="text-container">
       <h3>
         "Are you an
-        <a href="https://www.urbandictionary.com/define.php?term=artist"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=artist"
+          target="_blank"
           >artist</a
         >?" says Jane.
       </h3>
 
       <h3>
         "I couldn't become an artist because I
-        <a href="https://www.urbandictionary.com/define.php?term=had">had</a>
+        <a
+          href="https://www.urbandictionary.com/define.php?term=had"
+          target="_blank"
+          >had</a
+        >
         you," says Mummy.
       </h3>
       <h3>
         Peter and Jane feel
-        <a href="https://www.urbandictionary.com/define.php?term=guilty"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=guilty"
+          target="_blank"
           >guilty</a
         >.
       </h3>
