--- a/balloon.html
+++ b/balloon.html
@@ -18,7 +18,9 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="./img/balloon.png" width="420" height="600" alt="balloon" />
+    <div class="img-container">
+      <img src="./img/balloon.png" width="420" height="600" alt="balloon" />
+    </div>
     <div class="text-container">
       <h3>
         "I want to play with the
