--- a/painting.html
+++ b/painting.html
@@ -18,7 +18,9 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <img src="./img/painting.png" width="420" height="600" alt="painting" />
+    <div class="img-container">
+      <img src="./img/painting.png" width="420" height="600" alt="painting" />
+    </div>
     <div class="text-container">
       <h3>
         Peter sees the
