link to urban dictionary will open a new tab

--- a/balloon.html
+++ b/balloon.html
@@ -24,14 +24,18 @@
     <div class="text-container">
       <h3>
         "I want to play with the
-        <a href="https://www.urbandictionary.com/define.php?term=balloon"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=balloon"
+          target="_blank"
           >balloon</a
         >," says John.
       </h3>
 
       <h3>
         "Only
-        <a href="https://www.urbandictionary.com/define.php?term=venture"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=venture"
+          target="_blank"
           >venture</a
         >
         capitalists can play with this balloon," says Mummy.
