--- a/nothing.html
+++ b/nothing.html
@@ -26,7 +26,9 @@
 
       <h3>
         John is
-        <a href="https://www.urbandictionary.com/define.php?term=confused"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=confused"
+          target="_blank"
           >confused</a
         >.
       </h3>
@@ -34,8 +36,16 @@
       <h3>Mummy is happy.</h3>
       <h3>
         "There is nothing in the room because
-        <a href="https://www.urbandictionary.com/define.php?term=God">God</a> is
-        <a href="https://www.urbandictionary.com/define.php?term=Dead">dead</a
+        <a
+          href="https://www.urbandictionary.com/define.php?term=God"
+          target="_blank"
+          >God</a
+        >
+        is
+        <a
+          href="https://www.urbandictionary.com/define.php?term=Dead"
+          target="_blank"
+          >dead</a
         >," says Mummy.
       </h3>
       <h3>"Oh dear," says John.</h3>
