--- a/painting.html
+++ b/painting.html
@@ -24,13 +24,17 @@
     <div class="text-container">
       <h3>
         Peter sees the
-        <a href="https://www.urbandictionary.com/define.php?term=painting"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=painting"
+          target="_blank"
           >painting</a
         >.
       </h3>
       <h3>
         "I
-        <a href="https://www.urbandictionary.com/define.php?term=could"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=could"
+          target="_blank"
           >could</a
         >
         paint that," says Peter.
