--- a/rubbish.html
+++ b/rubbish.html
@@ -24,13 +24,17 @@
     <div class="text-container">
       <h3>
         "The rubbish
-        <a href="https://www.urbandictionary.com/define.php?term=smell"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=smell"
+          target="_blank"
           >smells</a
         >" says Susan.
       </h3>
       <h3>
         "It is the stench of our decaying Western
-        <a href="https://www.urbandictionary.com/define.php?term=civilization"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=civilization"
+          target="_blank"
           >civilization</a
         >," says Mummy.
       </h3>
