--- a/woman.html
+++ b/woman.html
@@ -24,19 +24,27 @@
     <div class="text-container">
       <h3>
         The
-        <a href="https://www.urbandictionary.com/define.php?term=man">man</a> is
-        a woman.
+        <a
+          href="https://www.urbandictionary.com/define.php?term=man"
+          target="_blank"
+          >man</a
+        >
+        is a woman.
       </h3>
       <h3>
         The
-        <a href="https://www.urbandictionary.com/define.php?term=Woman"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=Woman"
+          target="_blank"
           >woman</a
         >
         is a man.
       </h3>
       <h3>
         Peter is
-        <a href="https://www.urbandictionary.com/define.php?term=Excited"
+        <a
+          href="https://www.urbandictionary.com/define.php?term=Excited"
+          target="_blank"
           >excited</a
         >.
       </h3>
