--- a/rubbish.html
+++ b/rubbish.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./img/kid.png" />
     <script src="main.js"></script>
   </head>
   <body>
