switched to CSS grid

--- a/balloon.html
+++ b/balloon.html
@@ -19,30 +19,33 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <div class="img-container">
-      <img src="./img/balloon.png" width="420" height="600" alt="balloon" />
-    </div>
-    <div class="text-container">
-      <h3>
-        "I want to play with the
-        <a
-          href="https://www.urbandictionary.com/define.php?term=balloon"
-          target="_blank"
-          >balloon</a
-        >," says John.
-      </h3>
+    <h1>We go to the Gallery</h1>
+    <div class="detail-container">
+      <div class="img-container">
+        <img src="./img/balloon.png" width="420" height="600" alt="balloon" />
+      </div>
+      <div class="text-container">
+        <h3>
+          "I want to play with the
+          <a
+            href="https://www.urbandictionary.com/define.php?term=balloon"
+            target="_blank"
+            >balloon</a
+          >," says John.
+        </h3>
 
-      <h3>
-        "Only
-        <a
-          href="https://www.urbandictionary.com/define.php?term=venture"
-          target="_blank"
-          >venture</a
-        >
-        capitalists can play with this balloon," says Mummy.
-      </h3>
-      <br />
-      <a href="./index.html">"Fine, let's go see something else."</a>
+        <h3>
+          "Only
+          <a
+            href="https://www.urbandictionary.com/define.php?term=venture"
+            target="_blank"
+            >venture</a
+          >
+          capitalists can play with this balloon," says Mummy.
+        </h3>
+        <br />
+        <a href="./index.html">"Fine, let's go see something else."</a>
+      </div>
     </div>
   </body>
 </html>
