--- a/index.html
+++ b/index.html
@@ -21,24 +21,41 @@
   <body>
     <h1>We go to the Gallery</h1>
     <div class="container">
-      <a href="./rubbish.html">
-        <img src="./img/rubbish.png" width="400" height="580" alt="rubbish"
-      /></a>
-      <a href="./balloon.html"
-        ><img src="./img/balloon.png" width="400" height="580" alt="balloon"
-      /></a>
-      <a href="./nothing.html">
-        <img src="./img/nothing.png" width="400" height="580" alt="nothing" />
-      </a>
-      <a href="./woman.html">
-        <img src="./img/woman.png" width="400" height="580" alt="woman" />
-      </a>
-      <a href="./painting.html">
-        <img src="./img/painting.png" width="400" height="580" alt="painting" />
-      </a>
-      <a href="./artist.html">
-        <img src="./img/artist.png" width="400" height="580" alt="artist" />
-      </a>
+      <div class="item-1">
+        <a href="./rubbish.html">
+          <img src="./img/rubbish.png" width="400" height="580" alt="rubbish"
+        /></a>
+      </div>
+      <div class="item-2">
+        <a href="./balloon.html"
+          ><img src="./img/balloon.png" width="400" height="580" alt="balloon"
+        /></a>
+      </div>
+      <div class="item-3">
+        <a href="./nothing.html">
+          <img src="./img/nothing.png" width="400" height="580" alt="nothing" />
+        </a>
+      </div>
+      <div class="item-4">
+        <a href="./woman.html">
+          <img src="./img/woman.png" width="400" height="580" alt="woman" />
+        </a>
+      </div>
+      <div class="item-5">
+        <a href="./painting.html">
+          <img
+            src="./img/painting.png"
+            width="400"
+            height="580"
+            alt="painting"
+          />
+        </a>
+      </div>
+      <div class="item-6">
+        <a href="./artist.html">
+          <img src="./img/artist.png" width="400" height="580" alt="artist" />
+        </a>
+      </div>
     </div>
     <footer>
       A Dung Beetle Learning Guide Book by Ezra Elia and Miriam Elia
