--- a/nothing.html
+++ b/nothing.html
@@ -19,40 +19,43 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <div class="img-container">
-      <img src="./img/nothing.png" width="420" height="600" alt="nothing" />
-    </div>
-    <div class="text-container">
-      <h3>There is nothing in the room.</h3>
+    <h1>We go to the Gallery</h1>
+    <div class="detail-container">
+      <div class="img-container">
+        <img src="./img/nothing.png" width="420" height="600" alt="nothing" />
+      </div>
+      <div class="text-container">
+        <h3>There is nothing in the room.</h3>
 
-      <h3>
-        John is
-        <a
-          href="https://www.urbandictionary.com/define.php?term=confused"
-          target="_blank"
-          >confused</a
-        >.
-      </h3>
-      <h3>Susan is confused.</h3>
-      <h3>Mummy is happy.</h3>
-      <h3>
-        "There is nothing in the room because
-        <a
-          href="https://www.urbandictionary.com/define.php?term=God"
-          target="_blank"
-          >God</a
-        >
-        is
-        <a
-          href="https://www.urbandictionary.com/define.php?term=Dead"
-          target="_blank"
-          >dead</a
-        >," says Mummy.
-      </h3>
-      <h3>"Oh dear," says John.</h3>
+        <h3>
+          John is
+          <a
+            href="https://www.urbandictionary.com/define.php?term=confused"
+            target="_blank"
+            >confused</a
+          >.
+        </h3>
+        <h3>Susan is confused.</h3>
+        <h3>Mummy is happy.</h3>
+        <h3>
+          "There is nothing in the room because
+          <a
+            href="https://www.urbandictionary.com/define.php?term=God"
+            target="_blank"
+            >God</a
+          >
+          is
+          <a
+            href="https://www.urbandictionary.com/define.php?term=Dead"
+            target="_blank"
+            >dead</a
+          >," says Mummy.
+        </h3>
+        <h3>"Oh dear," says John.</h3>
 
-      <br />
-      <a href="./index.html">John wants to see something else.</a>
+        <br />
+        <a href="./index.html">John wants to see something else.</a>
+      </div>
     </div>
   </body>
 </html>
