--- a/rubbish.html
+++ b/rubbish.html
@@ -19,30 +19,33 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <div class="img-container">
-      <img src="./img/rubbish.png" width="420" height="600" alt="rubbish" />
-    </div>
-    <div class="text-container">
-      <h3>
-        "The rubbish
-        <a
-          href="https://www.urbandictionary.com/define.php?term=smell"
-          target="_blank"
-          >smells</a
-        >" says Susan.
-      </h3>
-      <h3>
-        "It is the stench of our decaying Western
-        <a
-          href="https://www.urbandictionary.com/define.php?term=civilization"
-          target="_blank"
-          >civilization</a
-        >," says Mummy.
-      </h3>
-      <br />
-      <h3>
-        <a href="./index.html">"Let's go see some more art,"</a> says Jane.
-      </h3>
+    <h1>We go to the Gallery</h1>
+    <div class="detail-container">
+      <div class="img-container">
+        <img src="./img/rubbish.png" width="420" height="600" alt="rubbish" />
+      </div>
+      <div class="text-container">
+        <h3>
+          "The rubbish
+          <a
+            href="https://www.urbandictionary.com/define.php?term=smell"
+            target="_blank"
+            >smells</a
+          >" says Susan.
+        </h3>
+        <h3>
+          "It is the stench of our decaying Western
+          <a
+            href="https://www.urbandictionary.com/define.php?term=civilization"
+            target="_blank"
+            >civilization</a
+          >," says Mummy.
+        </h3>
+        <br />
+        <h3>
+          <a href="./index.html">"Let's go see some more art,"</a> says Jane.
+        </h3>
+      </div>
     </div>
   </body>
 </html>
