--- a/woman.html
+++ b/woman.html
@@ -19,42 +19,45 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <div class="img-container">
-      <img src="./img/woman.png" width="420" height="600" alt="rubbish" />
-    </div>
-    <div class="text-container">
-      <h3>
-        The
-        <a
-          href="https://www.urbandictionary.com/define.php?term=man"
-          target="_blank"
-          >man</a
-        >
-        is a woman.
-      </h3>
-      <h3>
-        The
-        <a
-          href="https://www.urbandictionary.com/define.php?term=Woman"
-          target="_blank"
-          >woman</a
-        >
-        is a man.
-      </h3>
-      <h3>
-        Peter is
-        <a
-          href="https://www.urbandictionary.com/define.php?term=Excited"
-          target="_blank"
-          >excited</a
-        >.
-      </h3>
-      <h3>Peter is confused.</h3>
-      <h3>
-        Peter doesn't know what he wants.
-      </h3>
-      <br />
-      <a href="./index.html">Peter wants to go home.</a>
+    <h1>We go to the Gallery</h1>
+    <div class="detail-container">
+      <div class="img-container">
+        <img src="./img/woman.png" width="420" height="600" alt="rubbish" />
+      </div>
+      <div class="text-container">
+        <h3>
+          The
+          <a
+            href="https://www.urbandictionary.com/define.php?term=man"
+            target="_blank"
+            >man</a
+          >
+          is a woman.
+        </h3>
+        <h3>
+          The
+          <a
+            href="https://www.urbandictionary.com/define.php?term=Woman"
+            target="_blank"
+            >woman</a
+          >
+          is a man.
+        </h3>
+        <h3>
+          Peter is
+          <a
+            href="https://www.urbandictionary.com/define.php?term=Excited"
+            target="_blank"
+            >excited</a
+          >.
+        </h3>
+        <h3>Peter is confused.</h3>
+        <h3>
+          Peter doesn't know what he wants.
+        </h3>
+        <br />
+        <a href="./index.html">Peter wants to go home.</a>
+      </div>
     </div>
   </body>
 </html>
