--- a/painting.html
+++ b/painting.html
@@ -19,32 +19,35 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <div class="img-container">
-      <img src="./img/painting.png" width="420" height="600" alt="painting" />
-    </div>
-    <div class="text-container">
-      <h3>
-        Peter sees the
-        <a
-          href="https://www.urbandictionary.com/define.php?term=painting"
-          target="_blank"
-          >painting</a
-        >.
-      </h3>
-      <h3>
-        "I
-        <a
-          href="https://www.urbandictionary.com/define.php?term=could"
-          target="_blank"
-          >could</a
-        >
-        paint that," says Peter.
-      </h3>
-      <h3>
-        "But you didn't," says Mummy.
-      </h3>
-      <br />
-      <a href="./index.html">Peter really wants to go home.</a>
+    <h1>We go to the Gallery</h1>
+    <div class="detail-container">
+      <div class="img-container">
+        <img src="./img/painting.png" width="420" height="600" alt="painting" />
+      </div>
+      <div class="text-container">
+        <h3>
+          Peter sees the
+          <a
+            href="https://www.urbandictionary.com/define.php?term=painting"
+            target="_blank"
+            >painting</a
+          >.
+        </h3>
+        <h3>
+          "I
+          <a
+            href="https://www.urbandictionary.com/define.php?term=could"
+            target="_blank"
+            >could</a
+          >
+          paint that," says Peter.
+        </h3>
+        <h3>
+          "But you didn't," says Mummy.
+        </h3>
+        <br />
+        <a href="./index.html">Peter really wants to go home.</a>
+      </div>
     </div>
   </body>
 </html>
